--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
+   z-index: -10;
 }
 
 
@@ -16,10 +17,45 @@
 }
 
 .p-c{
-   top: 66%;
-   left: 50%;
-   border: 1px solid green; 
+  margin-top: -100px;
+   left: 1%;
+   
+    
 }
 .h-1{
     color: #4255A4;
+}
+
+.star{
+    color: orange;
+}
+
+.radius{
+    border-radius: 15px;
+}
+
+.arrow{
+
+    border-radius: 50px;
+    font-size: 30px;
+    padding: 10px;
+    color: white;
+    background-color:#4255A4 ;
+}
+
+.check{
+    font-size: 30px;
+    color: orange;
+    
+}
+
+.playbtn{
+    
+    font-size: 70px;
+    color: orange;
+    
+}
+.hover:hover{
+    z-index: 10;
+    text-decoration: underline;
 }
