--- a/index.css
+++ b/index.css
@@ -6,6 +6,13 @@
    z-index: -10;
 }
 
+.c-f2{
+    background-image: url(images/p1.png); 
+    background-repeat: no-repeat;
+    background-position: top;
+  
+ }
+ 
 
 .bb-1{
     background-color: orange;
@@ -64,7 +71,7 @@
 
 .swiper {
     width: 100%;
-   
+  
   }
 
   .swiper-slide {
@@ -78,7 +85,54 @@
 
   .swiper-slide img {
     display: block;
-    width: 100%;
-    
+    width: 100%; 
     object-fit: cover;
   }
+
+  .bg-color{
+    background-color: #4255A4 ;
+  }
+ 
+  .span{
+    z-index: 10;
+    position: relative;
+  }
+
+
+  .anim-btn::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background-color: #AE59FF;
+    top: 0;
+    left: 0;
+    transition: all 0.5s cubic-bezier(0.5, 1.6, 0.4, 0.7);
+    z-index: 1;
+    border-radius:0.50rem;
+
+  }
+
+    .anim-btn:hover::before{
+        width: 100%;
+        color: white;
+    }
+
+    .anim-btn1::before{
+        content: "";
+        position: absolute;
+        height: 0%;
+        width: 100%;
+        background-color: #AE59FF;
+        top: 0;
+        left: 0;
+        transition: all 0.5s cubic-bezier(0.5, 1.6, 0.4, 0.7);
+        z-index: 1;
+        border-radius:0.50rem;
+    
+      }
+
+      .anim-btn1:hover::before{
+        height: 100%;
+        color: white;
+    }
