--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
     background-image: url(images/p1.png); 
     background-repeat: no-repeat;
     background-position: top;
-  
+    z-index: 10000;
  }
  
 
@@ -18,6 +18,7 @@
     background-color: orange;
     color: white;
     border:1px solid orange;
+
 }
 .boxes{
     border-radius: 20px;
@@ -135,4 +136,37 @@
       .anim-btn1:hover::before{
         height: 100%;
         color: white;
+    }
+
+    .p-btn{
+      border: 1px solid purple;
+      color: purple;
+      background: white;
+    }
+
+    .p-btn:hover{
+      background-color:purple;
+      color: white;
+    }
+
+    .spin{
+      color: rgb(58, 0, 128);
+      
+    }
+    .spin-11{
+      transform: translate(18px,12px) !important;
+      border-radius: 50%;
+      
+    }
+
+    .log-form1{
+      background: rgba(0, 0, 0, 0.399);
+      border: 1px solid rgba(0, 0, 0, 0.399);
+    }
+
+    .li-1 input{
+      border: none;
+      border-bottom: 2px solid white;
+      background: transparent;
+      width: 100%;
     }
